[package]
name = "tide-sqlx"
version = "0.3.0"
authors = [
    "Jeremiah Senkpiel <fishrock123@rocketmail.com>",
    "Chris Dickinson <christopher.s.dickinson@gmail.com>",
    "C J Silverio <ceejceej@gmail.com>",
    "Kyle Anne Laymon <kyle.laymon@gmail.com>",
]
edition = "2018"
license = "BlueOak-1.0.0"
description = "Tide middleware for SQLx pooled connections & transactions."
readme = "README.md"
repository = "https://github.com/eaze/tide-sqlx"
keywords = ["tide", "middleware", "sqlx", "postgres", "transaction"]
categories = [
  "web-programming::http-server"
]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls"]
docs = ["rustls", "postgres"]
test = ["rustls", "postgres"]

# database
any = ["sqlx/any"]
postgres = ["sqlx/postgres"]

# tls implementation
native-tls = ["sqlx/runtime-async-std-native-tls"]
rustls = ["sqlx/runtime-async-std-rustls"]

[dependencies]
async-std = "1.7.0"
sqlx = "0.4.1"

[dependencies.tide]
version = "0.15.0"
default-features = false

# Dev-deps

[dev-dependencies]
anyhow = "1.0.34"
log = "0.4.11"

[dev-dependencies.async-std]
version = "1.7.0"
features = ["attributes"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
